--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ $primary-dark-color: #112D4E;
 
 $background-color: #FAFAFA;
 
-body * {
+body {
   font-family: 'Roboto', sans-serif;
+  background-color: $background-color;
 }
