--- a/src/components/post/styles.scss
+++ b/src/components/post/styles.scss
@@ -1,3 +1,5 @@
+@import '../../index.scss';
+
 .postContainer {
   box-shadow: #afafaf 0 0 0 1px;
 }
@@ -24,4 +26,9 @@
   font-size: 12px;
   color: white;
   font-weight: 800;
+}
+
+.action svg {
+  height: 24px;
+  width: 24px;
 }
