Add firebase and fix post create styling

--- a/src/components/createPost/styles.scss
+++ b/src/components/createPost/styles.scss
@@ -33,7 +33,7 @@
 .communitySingle {
   margin: 5px 12px 0 0!important;
   font-size: 11px;
-  background-color: $primary-light-color;
+  background-color: $background-color;
   padding: 4px 8px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -52,7 +52,7 @@
 
 .upload {
   padding: 4px 8px;
-  background-color: $primary-light-color;
+  background-color: $background-color;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
