Fix styling issues with community sidebar

--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -5,10 +5,20 @@
   height: 48px;
 }
 
+.communitiesHeader {
+  font-weight: 1000;
+}
+
 .active {
   border-right: 4px solid $primary-color !important;
 }
 
-.communityContainer:hover {
+.communityContainer {
+  opacity: 0.7;
+}
+
+.communityContainer:hover, .communityContainer.active {
   border-right: 4px solid $primary-light-color;
+  opacity: 1;
+  font-weight: 800;
 }
