--- a/src/components/userProfile/styles.scss
+++ b/src/components/userProfile/styles.scss
@@ -1,7 +1,16 @@
 @import "../../index.scss";
 
 .profileCoverContainer {
-  margin: 0 -40px;
+	margin: 0 -40px;
+	height: 300px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-size: cover;
+}
+
+.bio {
+	max-width: 600px;
 }
 
 .profileImage {
@@ -29,5 +38,15 @@
 
 .blogHeader {
   color: $primary-color;
-  font-size: 22px;
+	font-size: 22px;
+	font-weight: 1000;
+}
+
+.userPostsContainer {
+	border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.coverImage {
+	width: 100%;
+	height: 300px;
 }
