--- a/src/components/post/styles.scss
+++ b/src/components/post/styles.scss
@@ -2,15 +2,23 @@
 
 .postContainer {
 	border: 1px solid rgba(0, 0, 0, 0.12);
+	border-radius: 2px;
 }
 
 .topSection {
-  font-size: 12px;
+	font-size: 12px;
+	height: 48px;
 }
 
 .userImage {
-  width: 56px;
-  height: 56px;
+  width: 48px;
+  height: 48px;
+}
+
+.userNameContainer {
+	height: 24px;
+	font-size: 16px;
+	margin-bottom: 4px;
 }
 
 .userName {
@@ -23,9 +31,14 @@
   border-radius: 16px;
   padding: 4px 8px;
   height: 16px;
-  font-size: 12px;
+  font-size: 10px;
   color: white;
-  font-weight: 800;
+	font-weight: 800;
+	margin-right: 8px;
+}
+
+.postSection {
+	margin-top: 24px;
 }
 
 .action i {
@@ -33,7 +46,7 @@
 }
 
 .paddingModerate {
-	padding: 25px;
+	padding: 24px 24px 0px 24px;
 }
 
 .largeIcon {
