--- a/src/components/actionBar/styles.scss
+++ b/src/components/actionBar/styles.scss
@@ -1,12 +1,21 @@
 .action i {
-	font-size: 1.5em;
+	font-size: 28px;
 }
 
 .largeIcon {
-	font-size: 35px;
+	font-size: 28px;
 }
 
 .cancelRatingButton {
 	text-decoration: line-through;
 	transform: rotate(288deg);
+}
+
+.actionText {
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
+	font-size: 12px;
+	line-height: 16px;
+	color: rgba(0, 0, 0, 0.54);
 }
