--- a/src/components/postData/styles.scss
+++ b/src/components/postData/styles.scss
@@ -10,3 +10,10 @@
 	bottom: 0;
 	right: 0;
 }
+
+.text {
+	font-style: italic;
+	color: rgba(0, 0, 0, 0.54);
+	font-size: 16px;
+	line-height: 24px;
+}
