--- a/src/components/postUserMeta/styles.scss
+++ b/src/components/postUserMeta/styles.scss
@@ -15,11 +15,13 @@
 .userNameContainer {
 	height: 24px;
 	font-size: 16px;
+	line-height: 24px;
 	margin-bottom: 4px;
+	// color: rgba(0, 0, 0, 0.87);
 }
 
 .userName {
-  font-weight: 800;
+  font-weight: 500;
 }
 
 .communityLabel {
@@ -30,6 +32,6 @@
   height: 16px;
   font-size: 10px;
   color: white;
-	font-weight: 800;
+	font-weight: 400;
 	margin-right: 8px;
 }
