--- a/src/components/addContentButton/styles.scss
+++ b/src/components/addContentButton/styles.scss
@@ -1,7 +1,7 @@
 @import '../../index.scss';
 
 .addContent {
-  position: absolute !important;
+  position: fixed !important;
   right: 15%;
   bottom: 0;
   width: 100px;
