Fix add content button background

--- a/src/components/addContentButton/styles.scss
+++ b/src/components/addContentButton/styles.scss
@@ -8,7 +8,7 @@
 }
 
 .addButton {
-  background-color: $primary-dark-color;
+  background-color: $primary-color;
   color: white;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
