Fix border issue with post view

--- a/src/components/post/styles.scss
+++ b/src/components/post/styles.scss
@@ -1,6 +1,6 @@
 @import '../../index.scss';
 
-.postContainer {
+.postContainerBorder {
 	border: 1px solid rgba(0, 0, 0, 0.12);
 	border-radius: 2px;
 }
