--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,5 +1,10 @@
 @import "../../index.scss";
 
+.sideBarContainer {
+	position: fixed;
+	width: 240px;
+}
+
 .communityImage {
   width: 48px;
   height: 48px;
