--- a/src/components/userProfile/styles.scss
+++ b/src/components/userProfile/styles.scss
@@ -61,3 +61,17 @@
 	width: 100%;
 	height: 300px;
 }
+
+.followButton {
+	margin: 32px 0;
+}
+
+.followButton button {
+	border-radius: 32px;
+	font-size: 10px;
+	height: 24px;
+	padding: 8px 16px;
+	vertical-align: top;
+	text-transform: uppercase;
+	line-height: 8px;
+}
