User separate component for user avatars

--- a/src/components/userProfile/styles.scss
+++ b/src/components/userProfile/styles.scss
@@ -9,14 +9,14 @@
 	background-size: cover;
 }
 
-.profileImage {
+.profileImage img {
 	width: 150px;
 	height: 150px;
   margin-top: -75px;
   position: relative;
 }
 
-.profileImageNoCover {
+.profileImageNoCover img {
   width: 150px;
   position: relative;
 }
