Fix community label style

--- a/src/post/PostUserMeta/styles.scss
+++ b/src/post/PostUserMeta/styles.scss
@@ -32,6 +32,7 @@
   height: 16px;
   font-size: 10px;
   color: white;
-	font-weight: 400;
-	margin-right: 8px;
+  margin-right: 8px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
