Fix feed load issue

--- a/src/feed/SideBar/styles.scss
+++ b/src/feed/SideBar/styles.scss
@@ -5,6 +5,11 @@
 	width: 240px;
 }
 
+.communityImage img {
+  width: 48px;
+  height: 48px;
+}
+
 .communityImage {
   width: 48px;
   height: 48px;
