Fix user image size

--- a/src/post/Replies/CreateReply/styles.scss
+++ b/src/post/Replies/CreateReply/styles.scss
@@ -4,6 +4,11 @@
 	margin: 8px 8px 0 0;
 }
 
+.postingUserImage img {
+	height: 32px;
+	width: 32px;
+}
+
 .commentInputContainer {
 	border: 1px solid rgba(0, 0, 0, 0.12);
 	height: 30px;
