--- a/src/post/Replies/Reply/styles.scss
+++ b/src/post/Replies/Reply/styles.scss
@@ -3,6 +3,11 @@
 	height: 28px;
 }
 
+.userImage img {
+	width: 28px;
+	height: 28px;
+}
+
 .userName {
 	font-family: 'Roboto-Regular';
 	margin-left: 8px;
