--- a/src/post/PostUserMeta/styles.scss
+++ b/src/post/PostUserMeta/styles.scss
@@ -12,6 +12,11 @@
   height: 48px;
 }
 
+.userImage img {
+  width: 48px;
+  height: 48px;
+}
+
 .userNameContainer {
 	height: 24px;
 	font-size: 16px;
