--- a/src/components/communitySortFilter/styles.scss
+++ b/src/components/communitySortFilter/styles.scss
@@ -1,23 +1,23 @@
-@import '../../index.scss';
+@import "../../styles/_variables.scss";
 
 .filter {
-	padding: 8px 16px;
-	font-size: 16px;
-	-webkit-border-radius: 16px;
-	-moz-border-radius: 16px;
-	border-radius: 16px;
-	height: 24px;
-	background-color: $background-color;
-	transition: 0.3s all;
+  padding: $bs-rhythmDiv * 1px $bs-rhythmDiv * 2px;
+  font-size: $fs-base;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  border-radius: 16px;
+  height: 24px;
+  background-color: $background-color;
+  transition: 0.3s all;
 }
 
 .filter:hover:not(.activeFilter) {
-	background-color: $primary-light-color;
-	transition: 0.3s all;
+  background-color: $primary-light-color;
+  transition: 0.3s all;
 }
 
 .filterContainer {
-	padding: 30px 35px;
+  padding: 30px 35px;
 }
 
 .activeFilter {
