--- a/src/post/PostCard/styles.scss
+++ b/src/post/PostCard/styles.scss
@@ -1,4 +1,4 @@
-@import '../../index.scss';
+@import '../../styles/_variables.scss';
 
 .postContainerBorder {
 	border: 1px solid rgba(0, 0, 0, 0.12);
