--- a/src/components/postData/styles.scss
+++ b/src/components/postData/styles.scss
@@ -1,19 +1,21 @@
+@import "../../styles/_variables.scss";
+
 .imageDiv {
-	width: 100%;
-	position: relative;
+  width: 100%;
+  position: relative;
 }
 
 .imageDiv img {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .text {
-	font-style: italic;
-	color: rgba(0, 0, 0, 0.54);
-	font-size: 16px;
-	line-height: 24px;
+  font-style: italic;
+  color: rgba(0, 0, 0, 0.54);
+  font-size: $fs-base;
+  line-height: 24px;
 }
