--- a/src/components/userProfile/styles.scss
+++ b/src/components/userProfile/styles.scss
@@ -1,17 +1,17 @@
-@import "../../index.scss";
+@import "../../styles/_variables.scss";
 
 .profileCoverContainer {
-	margin: 0 -40px;
-	height: 300px;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: contain;
-	background-size: cover;
+  margin: 0 -40px;
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-size: cover;
 }
 
 .profileImage img {
-	width: 150px;
-	height: 150px;
+  width: 150px;
+  height: 150px;
   margin-top: -75px;
   position: relative;
 }
@@ -22,17 +22,17 @@
 }
 
 .interestsHeader {
-	font-size: 18px;
-	color: $primary-color;
+  font-size: $fs-large;
+  color: $primary-color;
 }
 
 .communityImage {
-	width: 80px;
-	height: 80px;
+  width: 80px;
+  height: 80px;
 }
 
 .bio {
-	max-width: 600px;
+  max-width: 600px;
 }
 
 .userName {
@@ -49,29 +49,29 @@
 
 .blogHeader {
   color: $primary-color;
-	font-size: 22px;
-	font-weight: 1000;
+  font-size: $fs-base * 1.5;
+  font-weight: 1000;
 }
 
 .userPostsContainer {
-	border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .coverImage {
-	width: 100%;
-	height: 300px;
+  width: 100%;
+  height: 300px;
 }
 
 .followButton {
-	margin: 32px 0;
+  margin: $bs-rhythmDiv * 4px 0;
 }
 
 .followButton button {
-	border-radius: 32px;
-	font-size: 10px;
-	height: 24px;
-	padding: 8px 16px;
-	vertical-align: top;
-	text-transform: uppercase;
-	line-height: 8px;
+  border-radius: 32px;
+  font-size: 10px;
+  height: 24px;
+  padding: $bs-rhythmDiv $bs-rhythmDiv * 2px;
+  vertical-align: top;
+  text-transform: uppercase;
+  line-height: 8px;
 }
