Add icons to community selection screen

--- a/src/components/CommunityButton/styles.scss
+++ b/src/components/CommunityButton/styles.scss
@@ -7,8 +7,13 @@
   position: inside;
   height: 18px;
   transition: all 0.3s ease-in;
+  display: flex;
 }
 
 .lighten {
   opacity: 0.67;
+}
+
+.communityIcon {
+  width: 32px;
 }
