Fix responsiveness for user interests

--- a/src/components/CommunityButton/styles.scss
+++ b/src/components/CommunityButton/styles.scss
@@ -4,9 +4,8 @@
   border-style: solid;
   cursor: pointer;
   text-align: center;
-  position: inside;
-  transition: all 0.3s ease-in;
   display: flex;
+  border: 1px solid black;
 }
 
 .lighten {
