Add modal styles for hyperlinks, images and undo/redo

--- a/src/post/create/CreateArticle/Editor/styles.scss
+++ b/src/post/create/CreateArticle/Editor/styles.scss
@@ -1,7 +1,7 @@
 .editorActionBar {
   bottom: 0;
   left: 0;
-  position: fixed;
+  position: absolute;
   justify-content: center !important;
   right: 0;
   padding: 16px 8px 8px 8px !important;
