--- a/src/post/create/CreateArticle/styles.scss
+++ b/src/post/create/CreateArticle/styles.scss
@@ -17,8 +17,8 @@
 }
 
 .inputBox {
-  top: calc(100vh - 321px) !important;
-  left: 0 !important;
+  top: calc(100vh - 360px) !important;
+  left: calc(50vw - 104px) !important;
 }
 
 .toggleButton div {
