Add nect page for article creator

--- a/src/post/create/CreateArticle/styles.scss
+++ b/src/post/create/CreateArticle/styles.scss
@@ -36,3 +36,9 @@
 .toggleButton:hover {
   box-shadow: none !important;
 }
+
+.nextButton {
+  position: absolute;
+  right: 16px;
+  bottom: 18px;
+}
