--- a/src/profile/UserProfile/UserCommunities/styles.scss
+++ b/src/profile/UserProfile/UserCommunities/styles.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/_variables.scss";
 
+.communityWrapper {
+  padding-bottom: 48px;
+}
+
 .interestsHeader {
   font-size: $fs-large;
   color: $primary-color;
