--- a/src/profile/UserProfile/styles.scss
+++ b/src/profile/UserProfile/styles.scss
@@ -1,5 +1,10 @@
 @import "../../styles/_variables.scss";
 
+.userMeta {
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
 .bio {
   max-width: 600px;
 }
