--- a/src/post/PostCard/styles.scss
+++ b/src/post/PostCard/styles.scss
@@ -1,7 +1,12 @@
 @import '../../styles/_variables.scss';
 
+.postContainer {
+  @media screen and (max-width: 600px) {
+    width: 100vw;
+  }
+}
+
 .postContainerBorder {
-	border: 1px solid rgba(0, 0, 0, 0.12);
 	border-radius: 2px;
 }
 
