--- a/src/profile/UserCoverContainer/styles.scss
+++ b/src/profile/UserCoverContainer/styles.scss
@@ -18,11 +18,11 @@
 }
 
 .coverPlaceholder {
-  background-color: #3f72af1c;
+  background-color: rgba(63, 114, 175, 0.11);
   height: 48px;
   width: 100vw;
   min-height: 176px;
-  color: #0000001c;
+  color: rgba(0, 0, 0, 0.11);
   display: flex;
   font-size: 48px;
   justify-content: center;
