Add explore route and icon

--- a/src/feed/SideBar/styles.scss
+++ b/src/feed/SideBar/styles.scss
@@ -52,6 +52,10 @@
 
 }
 
+.active img {
+  background-color: $primary-light-color;
+}
+
 .flexTill985 {
   @media screen and (max-width: 985px) {
     display: flex;
