--- a/src/post/create/CreatePost/InputArea/styles.scss
+++ b/src/post/create/CreatePost/InputArea/styles.scss
@@ -6,7 +6,7 @@
   font-size: 16px;
   color: rgba(0, 0, 0, 0.87);
   font-family: "Roboto";
-  height: 120px;
+  min-height: 120px;
 };
 
 .inputArea:focus {
