--- a/src/post/Replies/Reply/styles.scss
+++ b/src/post/Replies/Reply/styles.scss
@@ -11,17 +11,16 @@
 .userName {
 	font-family: 'Roboto-Regular';
 	margin-left: 8px;
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 20px;
-	color: rgba(0, 0, 0, 0.54);
+	color: rgba(0, 0, 0, 0.70);
+  font-weight: bold;
 }
 
 .replyBody {
-	font-style: italic;
-	font-weight: 500;
 	margin-top: 8px;
 	margin-left: 40px;
 	font-size: 14px;
-	color:rgba(0,0,0,0.38);
+	color:rgba(0,0,0,0.54);
 	line-height:16px;
 }
