--- a/src/post/create/CreatePost/CommunitySelector/styles.scss
+++ b/src/post/create/CreatePost/CommunitySelector/styles.scss
@@ -2,7 +2,20 @@
 
 .container {
   background-color: #fafafa;
-  padding: 20px 48px 32px 48px;
+  padding: 32px;
+
+  @media screen and (max-width: 480px) {
+    width: 100vw;
+    margin-left: -24px;
+    box-sizing: border-box;
+  }
+}
+
+.communityHeader {
+  font-weight: bold;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .communityLabel {
