--- a/src/post/create/CreatePost/PostMediaViewer/styles.scss
+++ b/src/post/create/CreatePost/PostMediaViewer/styles.scss
@@ -4,6 +4,15 @@
 
 .topOverlay {
   cursor: pointer;
+  background-color: #000;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  top: -20px;
+  right: -20px;
+  line-height: 40px;
+  color: #ffffffb8;
 }
 
 .noMediaText {
