--- a/src/post/Replies/Reply/styles.scss
+++ b/src/post/Replies/Reply/styles.scss
@@ -1,3 +1,7 @@
+.continer {
+  margin-bottom: 12px;
+}
+
 .userImage {
 	width: 28px;
 	height: 28px;
@@ -8,18 +12,21 @@
 	height: 28px;
 }
 
-.userName {
+.headerContainer {
 	font-family: 'Roboto-Regular';
-	margin-left: 8px;
 	font-size: 14px;
 	line-height: 20px;
-	color: rgba(0, 0, 0, 0.54);
+  color: rgba(0, 0, 0, 0.54);
+  margin-bottom: 4px;
+}
+
+.userName {
+	margin-left: 12px;
 }
 
 .replyBody {
 	font-style: italic;
 	font-weight: 500;
-	margin-top: 8px;
 	margin-left: 40px;
 	font-size: 14px;
 	color:rgba(0,0,0,0.38);
