--- a/src/post/Replies/Reply/styles.scss
+++ b/src/post/Replies/Reply/styles.scss
@@ -32,3 +32,15 @@
 	color:rgba(0,0,0,0.38);
 	line-height:16px;
 }
+
+.actionBarContainer {
+  margin-left: 40px;
+}
+
+.actionContainer {
+  margin-right: 24px;
+}
+
+.actionCount {
+  margin-left: 8px;
+}
