Fix font families

--- a/src/post/PostBody/styles.scss
+++ b/src/post/PostBody/styles.scss
@@ -11,14 +11,13 @@
 }
 
 .bodyContainer h1 {
-  font-family: Roboto-Medium;
+  font-weight: medium;
   font-size: 36px;
   color: $primary-color;
   line-height: 54px;
 }
 
 .bodyContainer h2 {
-  font-family: Roboto;
   font-size: 18px;
   color: $primary-color;
   line-height: 30px;
