--- a/src/post/Replies/PendingReply/styles.scss
+++ b/src/post/Replies/PendingReply/styles.scss
@@ -10,7 +10,7 @@
 }
 
 .userName {
-  font-family: "Roboto-Regular";
+  font-family: $fnt-primary;
   margin-left: 8px;
   font-size: 14px;
   line-height: 20px;
