--- a/src/post/Replies/Reply/styles.scss
+++ b/src/post/Replies/Reply/styles.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .continer {
   margin-bottom: 12px;
 }
@@ -13,7 +15,7 @@
 }
 
 .headerContainer {
-	font-family: 'Roboto-Regular';
+	font-family: $fnt-primary;
 	font-size: 14px;
 	line-height: 20px;
   color: rgba(0, 0, 0, 0.54);
