--- a/src/post/PostCard/PostCardBody/styles.scss
+++ b/src/post/PostCard/PostCardBody/styles.scss
@@ -2,7 +2,17 @@
 
 .title {
   font-size: 24px;
+  line-height: 1.5 * 24px;
+  max-height: 2 * 1.5 * 24px;
+  overflow: hidden;
   color: $primary-color;
   margin: 16px 32px;
   word-break: break-all;
+}
+
+.bodyText {
+  font-size: 16px;
+  line-height: 24px;
+  max-height: 3 * 24px;
+  overflow: hidden;
 }
