--- a/src/post/PostCard/PostCardBody/styles.scss
+++ b/src/post/PostCard/PostCardBody/styles.scss
@@ -16,3 +16,10 @@
   max-height: 3 * 24px;
   overflow: hidden;
 }
+
+.cardImage {
+  padding-top: 56.25%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
