--- a/src/post/create/CreateArticle/ArticleNext/styles.scss
+++ b/src/post/create/CreateArticle/ArticleNext/styles.scss
@@ -1,5 +1,9 @@
 .communitySelectorContainer {
   margin-bottom: 56px;
+
+  @media screen and (max-width: 480px) {
+    margin-left: -30px;
+  }
 }
 
 .tagsSelectorContainer {
