--- a/src/post/create/CreateArticle/styles.scss
+++ b/src/post/create/CreateArticle/styles.scss
@@ -1,5 +1,14 @@
 @import "../../../styles/_variables.scss";
 
+.editorContainer {
+  background-color: white;
+  @media screen and (max-width: 530px) {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+
+  }
+}
+
 .userSection {
   height: 72px;
   padding-right: 16px;
@@ -17,7 +26,7 @@
 }
 
 .inputBox {
-  top: calc(100vh - 360px) !important;
+  top: calc(100vh - 390px) !important;
   left: calc(50vw - 104px) !important;
 }
 
@@ -38,7 +47,19 @@
 }
 
 .nextButton {
-  position: absolute;
-  right: 16px;
+  position: fixed;
+  right: 40px;
   bottom: 18px;
+  z-index: 2;
+
+  @media screen and (min-width: 1280px) {
+    right: calc(50% - 600px);
+  }
+
+  @media screen and (max-width: 530px) {
+    bottom: 78px;
+    right: 24px;
+  }
+
 }
+
